# zen-editor-old

./: .gitignore  README.md  index.html  main.d.ts  package.json  tsconfig.json
src/: app.ts  base.css  keybindings.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: addon.ts  debugger.ts  files.ts  hamburger.ts  icon.ts  run.ts  search.ts  settings.ts  terminal.ts  textarea.ts  toggle.ts  tray.ts
src/editor/: codemirror.css  editor.ts
src/emptytab/: emptytab.css  emptytab.ts
src/files/: files.ts  icon.ts
src/hamburger/: hamburger.css  hamburger.ts  icon.ts  pages.ts
src/styles/: codemirror.css  toggle.css
src/tabs/: icon.ts  tab.ts  tabs.css  tabs.ts
src/toggle/: toggle.css  toggle.ts  tray.ts
src/utilities/: component.ts  element.ts  icon.ts  pages.ts  toggle-member.ts
