[package]
name = "zen-editor"
version = "0.1.0"
description = "write your code with the peace of mind"
authors = ["you"]
license = ""
repository = ""
default-run = "zen-editor"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
